--- a/public/forgetPassword.html
+++ b/public/forgetPassword.html
@@ -38,16 +38,10 @@
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div style="clear:both"></div> 
-			<button onClick="alertTips()"; style="margin-left:600px;width:50px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
+			<button id="checkButtonId" style="margin-left:600px;width:50px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
 				Check
 			</button>
 			<!-- It is used to set the button "Create account" to let the users set their account. -->
-			<script>
-                function alertTips(){
-                    alert("Inorrect,Please try again");
-					self.location='forgetPassword.html';
-                }
-			</script>
 		
 </body>
 </html>
