--- a/public/search.html
+++ b/public/search.html
@@ -25,21 +25,17 @@
         </div> 
 
         <div style="width: 1024px;height:100px;font-weight:400;margin:0 auto;background:white">
-            <!--why cannot margin top/-->
-            <!---->
             <div style = "float:left;font-size:20px;color:blue;font-weight:500;margin-top:10px;">
                 Material name
                 <input type="text" id="materialName" />
             </div>   
             <div style="float:left; margin-left: 50px;font-size:20px;color:blue;font-weight:500;margin-top:10px">
                 Stock time
-                <input type="text" id="stockTime" />
-                <!-- ！时间？ -->
+                <input type="date" id="stockTime" />
             </div>  
             <div style="float:left; margin-left: 50px;font-size:20px;color:blue;font-weight:500;margin-top:10px">
                 Use time
-                <input type="text" id="useTime" />
-                <!-- ！时间？ -->
+                <input type="date" id="useTime" />
             </div>  
         </div>
 
@@ -48,9 +44,8 @@
                 Available or Not
             </div>   
             <div style = "float:left;font-size:20px;color:black;font-weight:500;">
-                <input type="radio"  value="Yes">Yes
-                <input type="radio" value="Not">No 
-               <!-- 为什么两个都可以按 --> 
+                <input type="radio"  id="availability" name="availability" value="Yes">Yes
+                <input type="radio" id="availability" name="availability" value="Not">No 
             </div>      
             <div style="float:left; margin-left: 50px;font-size:20px;color:blue;font-weight:500;">
                 Material Number
