--- a/public/search.html
+++ b/public/search.html
@@ -44,8 +44,8 @@
                 Available or Not
             </div>   
             <div style = "float:left;font-size:20px;color:black;font-weight:500;">
-                <input type="radio"  id="availability" name="availability" value="Yes">Yes
-                <input type="radio" id="availability" name="availability" value="Not">No 
+                <input type="radio"   name="availability" value="1">Yes
+                <input type="radio"  name="availability" value="0">No 
             </div>      
             <div style="float:left; margin-left: 50px;font-size:20px;color:blue;font-weight:500;">
                 Material Number
@@ -54,6 +54,26 @@
             <button id="searchButtonId" style="font-size:20px;margin-left:50px;width:80px;height:30px;background:lightskyblue;float:left;">
                 Search
             </button>
+        </div>
+
+        <div style="width: 1024px;font-weight:400;margin-top:20px;background:white" id="tableId">
+            <div style="width: 1024px;font-weight:400;">
+                <div class="col-title">
+                    material name
+                </div>
+                <div class="col-title">
+                    stock time
+                </div>
+                <div class="col-title">
+                    use time
+                </div>
+                <div class="col-title">
+                    Available or not
+                </div>
+                <div class="col-title-right">
+                    Material Number
+                </div>
+            </div>
         </div>
 
         
