--- a/public/profits.html
+++ b/public/profits.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
 	</style>
-	<link href="css/variableCost.css rel="stylesheet type="text/css" />
+	<link href="css/profits.css rel="stylesheet type="text/css" />
 	
 
 </head>
@@ -14,26 +14,19 @@
             <div id="homeID" style = "float:left;margin-left:10px;">	
                 <img src="./img/home.png" style="width:45px;height:45px"/>
             </div> 
-            <div style = "float:left;margin-left: 250px;">
+            <div style = "float:left;margin-left: 300px;">
                 <img src="./img/calculation.png" style="width:45px;height:45px"/>
             </div> 
 			<div style = "float:left;margin-left: 30px;font-size:30px;color:navy;font-weight:600;">
-				Calculation: Variable Cost
+				Calculation: Profits
             </div>   
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
         </div> 
-        <div style = "float: left;margin-top:50px; margin-left:300px;text-align:center;font-size:25px; color:navy;-weight:580;">
-            <!--空格？ 字体粗细-->
-            Store Data
-        </div> 
-        <div style = "float: left;margin-top:50px; margin-left:300px;text-align:center;font-size:25px; color:navy;-weight:580;">
-            Calculate Space
-        </div> 
-       
+        
     </div>
 
-	<script defer src="js/variableCost.js"></script>
+	<script defer src="js/profits.js"></script>
 </body>
 </html>
 
