--- a/public/calculation.html
+++ b/public/calculation.html
@@ -23,22 +23,29 @@
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
         </div> 
-        <div style = "float: left;margin-top:50px; margin-left:200px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:580;">
-            Costs
-        </div> 
-        <div id="revenueId" style = "float: left;margin-top:50px; margin-left:150px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:580;">
-            Revenue
-        </div> 
-        <div id="profitId" style = "float: left;margin-top:50px; margin-left:150px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:580;">
-            Profit
-        </div> 
+        <div style = "float:left; width:1024px">
+            <div style = "float: left;margin-top:50px; margin-left:200px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:580;">
+                Costs
+            </div> 
+            <div id="revenueId" style = "float: left;margin-top:50px; margin-left:150px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:580;">
+                Revenue
+            </div> 
+            <div id="profitId" style = "float: left;margin-top:50px; margin-left:150px;text-align:center;font-size:25px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:580;">
+                Profit
+            </div> 
 
-        <div id="fixedCostId" style = "float: left;margin-top:30px; margin-left:200px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:100px;color:navy;font-weight:550;">
-            Fixed Costs
-        </div> 
-        <div id="variableCostId" style = "float: left;margin-top:30px; margin-left:300px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:170px;color:navy;font-weight:550;">
-            Variable Costs
-        </div> 
+        </div>
+            
+        <div style = "float:left; width:1024px">
+            <div id="fixedCostId" style = "float: left;margin-top:30px; margin-left:200px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
+                Fixed Costs
+            </div>
+        </div>
+        <div style = "float:left; width:1024px">
+            <div id="variableCostId" style = "float: left;margin-top:30px; margin-left:200px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
+                Variable Costs
+            </div> 
+        </div>
     </div>
 
 	<script defer src="js/calculation.js"></script>
