--- a/public/revenue.html
+++ b/public/revenue.html
@@ -23,13 +23,14 @@
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
         </div> 
-        <div style = "float: left;margin-top:50px; margin-left:300px;text-align:center;font-size:25px; color:navy;-weight:580;">
-            <!--空格？ 字体粗细-->
-            Store Data
-        </div> 
-        <div style = "float: left;margin-top:50px; margin-left:300px;text-align:center;font-size:25px; color:navy;-weight:580;">
-            Calculate Space
-        </div> 
+        <div style = "float:left; width:1024px">
+            <div style = "float: left;margin-top:50px; margin-left:240px;text-align:center;font-size:25px; color:navy;font-weight:700;">
+                Store Data
+            </div> 
+            <div style = "float: left;margin-top:50px; margin-left:300px;text-align:center;font-size:25px; color:navy;font-weight:700;">
+                Calculate Space
+            </div> 
+        </div>
        
     </div>
 
