--- a/public/fixedCost.html
+++ b/public/fixedCost.html
@@ -23,10 +23,17 @@
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
         </div> 
-        <div style = "float: left;margin-top:50px; margin-left:200px;text-align:center;font-size:25px; color:navy;-weight:580;">
-            <!--空格？ 字体粗细-->
-            Store Data (Per month)
-        </div> 
+        <div style = "float:left; width:1024px">
+            <div style = "float: left;margin-top:50px; margin-left:200px;text-align:center;font-size:25px; color:navy;font-weight:700;">
+                Store Data
+            </div> 
+        </div>
+        <div style = "float:left; width:1024px">
+            <div style = "float: left;margin-top:20px; margin-left:190px;text-align:center;font-size:25px; color:navy;font-weight:700;">
+                ( Per month )
+            </div> 
+        </div>
+        
        
     </div>
 
