--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -25,7 +25,8 @@
 			<button id="loginButton" style="margin-left:600px;width:100px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
 				Back to login
 			</button>
-		
+		</div>
+    </div>	
 </body>
 </html>
 
