add back to calculation

--- a/public/profits.html
+++ b/public/profits.html
@@ -14,7 +14,7 @@
             <div id="homeID" style = "float:left;margin-left:10px;">	
                 <img src="./img/home.png" style="width:45px;height:45px"/>
             </div> 
-            <div style = "float:left;margin-left: 300px;">
+            <div id="calculationId" style = "float:left;margin-left: 300px;">
                 <img src="./img/calculation.png" style="width:45px;height:45px"/>
             </div> 
 			<div style = "float:left;margin-left: 30px;font-size:30px;color:navy;font-weight:600;">
