--- a/public/accountCreating.html
+++ b/public/accountCreating.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 	</style>
 	<link href="css/accountCreating.css" rel="stylesheet" type="text/css" />
+	<script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 	<script defer src="js/accountCreating.js"></script>
 </head>
 <!-- These head codings are connecting this account Creating html window to the css and javascript code -->
