--- a/public/calculation.html
+++ b/public/calculation.html
@@ -3,9 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
-	</style>
+    </style>
 	<link href="css/calculation.css rel="stylesheet type="text/css" />
-	
+    <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
+
 
 </head>
 <body style="margin-left:0px;">
