--- a/public/charts.html
+++ b/public/charts.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 	</style>
 	<link href="css/charts.css" rel="stylesheet" type="text/css" />
-	
+    <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
 </head>
 <body style="margin-left:0px;">
