--- a/public/profits.html
+++ b/public/profits.html
@@ -5,7 +5,8 @@
 	<style type="text/css">
 	</style>
 	<link href="css/profits.css rel="stylesheet type="text/css" />
-	
+    <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
+
 
 </head>
 <body style="margin-left:0px;">
