--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 	</style>
 	<link href="css/resetPassword.css" rel="stylesheet" type="text/css" />
+	<script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 	<script defer src="js/resetPassword.js"></script>
 </head>
 <body style="margin-left:0px;">
