--- a/public/search.html
+++ b/public/search.html
@@ -4,7 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
 	</style>
-	<link href="css/search.css" rel="stylesheet" type="text/css" />
+    <link href="css/search.css" rel="stylesheet" type="text/css" />
+    <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 	<script defer src="js/search.js"></script>
 </head>
 <body style="margin-left:0px;">
