--- a/public/signIn.html
+++ b/public/signIn.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 	</style>
 	<link href="css/signIn.css" rel="stylesheet" type="text/css" />
+	<script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 	<script defer src="js/signIn.js"></script>
 	<!-- These head codings are connecting this signIn html window to the css and javascript code -->
 </head>
