--- a/public/fixedCost.html
+++ b/public/fixedCost.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
 	</style>
-	<link href="css/fixedCost.css rel="stylesheet type="text/css" />
+	<link href="./css/fixedCost.css" rel="stylesheet" type="text/css" />
     <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 
 
@@ -74,7 +74,7 @@
             </div>
 
             <div style = "float:left; width:400px; height:200px">
-                <div style = "float: left;margin-top:50px; width:300px; height:200px; margin-left:50px;font-size:20px; color:blue;font-weight:500;border:1px solid black;">
+                <div id="space" style = "float: left;margin-top:50px; width:300px; height:200px; margin-left:50px;font-size:20px; color:blue;font-weight:500;border:1px solid black;">
                    
                 </div>
                 
