--- a/public/revenue.html
+++ b/public/revenue.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
 	</style>
-	<link href="css/revenue.css rel="stylesheet type="text/css" />
+	<link href="css/revenue.css" rel="stylesheet" type="text/css" />
     <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 
 
