--- a/public/fixedCost.html
+++ b/public/fixedCost.html
@@ -48,10 +48,10 @@
                 <input style= "width: 100px; margin-left: 51px;" type="text" id="utilityFees" />
             </div>  
 
-            <button id="resetId" style="margin-left:140px;width:70px;height:30px;color:white;background:#818289c4;float:left;margin-top:50px;">
+            <button id="resetId" style="margin-left:140px;width:70px;height:30px;color:white;background:#818289c4;float:left;margin-top:100px;">
 				Reset
             </button>
-            <button id="submitId" style="margin-left:110px;width:70px;height:30px;color:white;background:#39cd3f;float:left;margin-top:50px;">
+            <button id="submitId" style="margin-left:110px;width:70px;height:30px;color:white;background:#39cd3f;float:left;margin-top:100px;">
 				Submit
 			</button>
         </div>
@@ -81,8 +81,11 @@
             </div>
 
             <div style = "float:left; width:500px; height:1024px">
-                <div style = "float: left;margin-top:50px; margin-left:100px;font-size:20px; color:blue;font-weight:500;">
+                <div style = "float: left;margin-top:100px; margin-left:120px;font-size:20px; color:blue;font-weight:500;">
                     Total Costs
+                </div>
+                <div id= "totalCost" style = "float: left;margin-top:100px; margin-left:120px;font-size:20px; color:black;font-weight:500;">
+                    
                 </div>
             </div>
         </div>
