--- a/public/variableCost.html
+++ b/public/variableCost.html
@@ -51,16 +51,17 @@
 
             <div id="space" style = "float:left; width:512px;">
                 <div style = "float:left;margin-left: 40px; font-size:20px;margin-top:5px">
-                    <select id="materialName" class="input">
-                        <option value="duckNeck">duck neck</option>
+                    <select id="materialName1" class="input">
+                        <option value="duck neck">duck neck</option>
                         <option value="tofu">tofu</option>
+                        <option value="vegetable">vegetable</option>
                       </select>
                 </div>
                 <div style = "float:left;margin-left: 35px; font-size:20px;margin-top:5px;">                    
-                    <input style= "width: 120px;height:25px" type="text" id="materialNumber" />
+                    <input style= "width: 120px;height:25px" type="text" id="materialNumber1" />
                 </div> 
                 <div style = "float:left;margin-left: 35px; font-size:20px;margin-top:5px;">                    
-                    <input style= "width: 120px;height:25px" type="text" id="materialCost" />
+                    <input style= "width: 120px;height:25px" type="text" id="materialCost1" />
                 </div> 
             </div>
             <div id="addId" style = "float:left;margin-left:460px;margin-top:5px;text-align: center;color:azure; font-size:20px;border-radius:10px;font-weight:800;width:20px;height:20px;background: blue;">
