--- a/public/profits.html
+++ b/public/profits.html
@@ -24,7 +24,31 @@
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
         </div> 
-        
+
+        <div style = "float:left;width:1024px;height:60px;background:white;margin:0 auto">
+            <div style = "float:left; width:1024px; height:100px">
+                <div style = "float:left;margin-left:100px;margin-top:20px;font-size:22px;color:blue">
+                Start time
+                <input type="date" id="dateLeft" />
+                </div> 
+                <div style = "float:left;margin-left:250px;font-size:22px;margin-top:20px;color:blue">
+                    End time
+                    <input type="date" id="dateLeft" />
+                </div> 
+                <button id="searchId" style="margin-left:100px;width:100px;height:30px;color:white;background:#39cd3f;margin-top:20px;">
+                    Search
+                </button>
+            </div>
+        </div> 
+
+        <div style = "float:left;width:1024px;height:500px;background:white;margin:0 auto">
+            <div style = "float:left;margin-left:100px;margin-top:20px;font-size:22px;color:blue">
+                <img src="./img/leftArrow.png" style="width:110px;height:60px"/>
+            </div> 
+            <div style = "float:left;margin-left:600px;margin-top:24px;font-size:22px;color:blue">
+                <img src="./img/rightArrow.png" style="width:110px;height:60px"/>
+            </div> 
+        </div> 
     </div>
 
 	<script defer src="js/profits.js"></script>
