--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -23,7 +23,7 @@
 				<input type="text" id="confirmNewPassword" />
 			</div>
 			<div style="clear:both"></div> 
-			<button id="loginButton" style="margin-left:600px;width:100px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
+			<button id="loginButtonId" style="margin-left:600px;width:100px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
 				Back to login
 			</button>
 		</div>
