--- a/public/search.html
+++ b/public/search.html
@@ -28,7 +28,11 @@
         <div style="width: 1024px;height:100px;font-weight:400;margin:0 auto;background:white">
             <div style = "float:left;font-size:20px;color:blue;font-weight:500;margin-top:10px;">
                 Material name
-                <input type="text" id="materialName" />
+                <select id="materialName" class="input">
+                    <option value="spicy duck neck">spicy duck neck</option>
+                    <option value="cured meat">cured meat</option>
+                </select>
+                
             </div>   
             <div style="float:left; margin-left: 50px;font-size:20px;color:blue;font-weight:500;margin-top:10px">
                 Stock time
@@ -68,6 +72,7 @@
                 <div class="col-title">
                     use time
                 </div>
+
                 <div class="col-title">
                     Available or not
                 </div>
