--- a/public/profits.html
+++ b/public/profits.html
@@ -78,38 +78,51 @@
                 <div style = "float:left;width:110px;height:80px;margin-left:130px;border-top:1px solid gray;border-left:1px solid gray;font-size:17px;color:gray">
                     
                     <div style = "width:45px;float:left;color:red;font-size:10px">
-                        Cost: $115
+                        Cost: $78
                     </div>
                     <div style = "width:65px;float:left;color:blue;font-size:10px">
-                        Revenue: $135
+                        Revenue: $157.5
                     </div>
-                    <div style = "margin-top:18px;width:110px;float:left;color:gray;font-size:17px;text-align: center;">
+                    <div style = "margin-top:8px;width:110px;float:left;color:gray;font-size:17px;text-align: center;">
                        1
                     </div>
                     <div style = "margin-top:5px;text-align:center;width:110px;float:left;color:green;font-size:10px">
-                        Profit:$20
+                        Profit:$79.5
                     </div>
                     <div style= "clear: both;">
                     </div>
                 </div>
                 <div style = "float:left;width:110px;height:80px;border-top:1px solid gray;text-align: center;border-left:1px solid gray;font-size:17px;color:gray">
                     <div style = "width:45px;float:left;color:red;font-size:10px">
-                        Cost: $115
+                        Cost: $34
                     </div>
                     <div style = "width:65px;float:left;color:blue;font-size:10px">
-                        Revenue: $135
+                        Revenue: $72.4
                     </div>
                     <div style = "margin-top:18px;width:110px;float:left;color:gray;font-size:17px;text-align: center;">
                        2
                     </div>
                     <div style = "margin-top:5px;text-align:center;width:110px;float:left;color:green;font-size:10px">
-                        Profit:$20
+                        Profit:$38.4
                     </div>
                     <div style= "clear: both;">
                     </div>
                 </div>
-                <div style = "float:left;line-height:80px;width:110px;height:80px;border-top:1px solid gray;text-align: center;border-left:1px solid gray;font-size:17px;color:gray">
-                    3
+                <div style = "float:left;width:110px;height:80px;border-top:1px solid gray;text-align: center;border-left:1px solid gray;font-size:17px;color:gray">
+                    <div style = "width:45px;float:left;color:red;font-size:10px">
+                        Cost: $54.5
+                    </div>
+                    <div style = "width:65px;float:left;color:blue;font-size:10px">
+                        Revenue: $141.25
+                    </div>
+                    <div style = "margin-top:7px;width:110px;float:left;color:gray;font-size:17px;text-align: center;">
+                       3
+                    </div>
+                    <div style = "margin-top:5px;text-align:center;width:110px;float:left;color:green;font-size:10px">
+                        Profit:$86.75
+                    </div>
+                    <div style= "clear: both;">
+                    </div>
                 </div>
                 <div style = "float:left;line-height:80px;width:110px;height:80px;border-top:1px solid gray;text-align: center;border-left:1px solid gray;font-size:17px;color:gray">
                     4
@@ -210,13 +223,13 @@
 
 
             <div style = "float:left;margin-left:250px;margin-top:20px;font-size:18px;color:red">
-                Total Cost: $2????
+                Total Cost: $166.5
             </div> 
             <div style = "float:left;margin-left:80px;margin-top:20px;font-size:18px;color:blue">
-                Total Revenue: $2????
+                Total Revenue: $371.15
             </div> 
             <div style = "float:left;margin-left:80px;margin-top:20px;font-size:18px;color:green">
-                Total Profits: $2????
+                Total Profits: $204.65
             </div> 
         </div> 
         
