--- a/public/calculation.html
+++ b/public/calculation.html
@@ -6,17 +6,20 @@
     </style>
 	<link href="css/calculation.css" rel="stylesheet" type="text/css" />
     <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
-
+	<!-- These head codings are connecting this account Creating html window to the css and javascript code -->
 
 </head>
 <body style="margin-left:0px;">
     <div style="width: 1024px;height:1024px;font-weight:400;background:white;margin:0 auto;">
         <div style = "float:left;width:1024px;background:white;margin:0 auto">
+            <!-- Create my window here-->
             <div id="homeID" style = "float:left;margin-left:10px;">	
                 <img src="./img/home.png" style="width:45px;height:45px"/>
+             <!-- insert image -->
             </div> 
             <div style = "float:left;margin-left: 325px;">
                 <img src="./img/calculation.png" style="width:45px;height:45px"/>
+                <!-- insert image -->
             </div> 
 			<div style = "float:left;margin-left: 30px;font-size:30px;color:navy;font-weight:600;">
 				Calculation
