--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,12 +6,13 @@
 	</style>
 	<link href="css/dashboard.css" rel="stylesheet" type="text/css" />
 	<script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
-
+	<!-- These head codings are connecting this account Creating html window to the css and javascript code -->
 
 </head>
 <body style="margin-left:0px;">
     <div style="width: 1024px;height:1024px;font-weight:400;background:white;margin:0 auto">
 		<div style = "float:left;width:1024px;background:white;">
+			<!-- Create my window here-->
 			<div style = "text-align:center;font-size:30px;color:navy;font-weight:600;">
 				Dashboard
 			</div> 
