--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -7,17 +7,25 @@
 	<link href="css/resetPassword.css" rel="stylesheet" type="text/css" />
 	<script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 	<script defer src="js/resetPassword.js"></script>
+	<!-- These head codings are connecting this account Creating html window to the css and javascript code -->
+
 </head>
 <body style="margin-left:0px;">
-    <div style="width: 1024px;height:1024px;font-weight:400;background:white;margin:0 auto">
+	<div style="width: 1024px;height:1024px;font-weight:400;background:white;margin:0 auto">
+		<!-- set the value of window(The height/ width/ background) And every elements
+		inside should be within this big range -->
 		<div style = "float:left;width:1024px;background:white;">
 			<div style = "text-align:center;font-size:25px;color:dodgerblue;font-weight:600;">
 				Reset  password
 			</div>
+			<!-- set the title of the window, we can know it is centered from the code
+				"text-align:center", also the font size of the title and color are set
+				by me : 25px and dodgerblue-->
 			<div class="item">
 				New Password
 				<input type="text" id="newPassword" />
-			</div>
+			</div><!-- use the class I set in .css (called Item) as all these elements are the same 
+				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
 				Confirm new password
 				<input type="text" id="confirmNewPassword" />
