--- a/public/calculation.html
+++ b/public/calculation.html
@@ -44,11 +44,18 @@
             <div id="fixedCostId" style = "float: left;margin-top:30px; margin-left:200px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
                 Fixed Costs
             </div>
+            <div id="inputProfitID" style = "float: left;margin-top:30px; margin-left:380px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
+                Input Profit
+            </div>
         </div>
         <div style = "float:left; width:1024px">
             <div id="variableCostId" style = "float: left;margin-top:30px; margin-left:200px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
                 Variable Costs
             </div> 
+            <div id="showProfitID" style = "float: left;margin-top:30px; margin-left:380px;text-align:center;font-size:20px; border-bottom:1px solid navy;width:150px;color:navy;font-weight:550;">
+                Show Profit
+            </div>
+        </div>
         </div>
     </div>
 
