--- a/public/showProfit.html
+++ b/public/showProfit.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<style type="text/css">
 	</style>
-	<link href="css/profits.css" rel="stylesheet" type="text/css" />
+	<link href="css/showprofit.css" rel="stylesheet" type="text/css" />
     <script src="./js/jquery-3.5.1.min.js" type="text/javascript"></script>
 
 
@@ -15,11 +15,11 @@
             <div id="homeID" style = "float:left;margin-left:10px;">	
                 <img src="./img/home.png" style="width:45px;height:45px"/>
             </div> 
-            <div id="calculationId" style = "float:left;margin-left: 300px;">
+            <div id="calculationId" style = "float:left;margin-left: 250px;">
                 <img src="./img/calculation.png" style="width:45px;height:45px"/>
             </div> 
-			<div style = "float:left;margin-left: 30px;font-size:30px;color:navy;font-weight:600;">
-				Calculation: Profits
+			<div style = "float:left;margin-left: 20px;font-size:30px;color:navy;font-weight:600;">
+				Calculation: Show Profits
             </div>   
         </div> 
         <div style = "float:left;margin-left:10px;margin-top:10px;border-bottom:3px solid black;width:1024px;height:1px;color:black;background:green;">	
@@ -42,12 +42,6 @@
         </div> 
 
         <div id="calendar" style = "display:none;float:left;width:1024px;height:500px;background:white;margin:0 auto">
-            <div style = "float:left;margin-left:100px;margin-top:20px;font-size:22px;color:blue">
-                <img src="./img/leftArrow.png" style="width:110px;height:60px"/>
-            </div> 
-            <div style = "float:left;margin-left:650px;margin-top:22px;font-size:22px;color:gr">
-                <img src="./img/rightArrow.png" style="width:110px;height:60px"/>
-            </div> 
             
             <div style = "float:left;height:50px;width:1024px;margin-top:20px;font-size:17px;color:gray">
                 <div style = "float:left;width:110px;margin-left:170px;margin-top:20px;font-size:17px;color:gray">
@@ -235,7 +229,7 @@
         
     </div>
 
-	<script defer src="js/profits.js"></script>
+	<script defer src="js/showProfit.js"></script>
 </body>
 </html>
 
