--- a/public/inputProfit.html
+++ b/public/inputProfit.html
@@ -36,13 +36,13 @@
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
 				Costs
-				<input type="text" id="phoneOrEmail" />
+				<input type="text" id="costs" />
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item" >
 				Revenue
-				<input type="text" id="password" />
+				<input type="text" id="revenue" />
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
