--- a/public/showProfit.html
+++ b/public/showProfit.html
@@ -29,13 +29,13 @@
             <div style = "float:left; width:1024px; height:100px">
                 <div style = "float:left;margin-left:100px;margin-top:20px;font-size:22px;color:blue">
                 Start time
-                <input type="date" id="dateLeft" />
+                <input type="date" id="startTime" />
                 </div> 
                 <div style = "float:left;margin-left:250px;font-size:22px;margin-top:20px;color:blue">
                     End time
-                    <input type="date" id="dateLeft" />
+                    <input type="date" id="endTime" />
                 </div> 
-                <button id="searchId" style="margin-left:100px;width:100px;height:30px;color:white;background:#39cd3f;margin-top:20px;">
+                <button id="searchButton" style="margin-left:100px;width:100px;height:30px;color:white;background:#39cd3f;margin-top:20px;">
                     Search
                 </button>
             </div>
@@ -46,7 +46,6 @@
 
             <div style = "float:left;height:450px;width:1024px;margin-top:5px;font-size:17px;color:gray">
                 <div style = "float:left;width:110px;height:80px;margin-left:130px;border-top:1px solid gray;border-left:1px solid gray;font-size:17px;color:gray">
-                    
                     <div style = "width:45px;float:left;color:red;font-size:10px">
                         Cost: $78
                     </div>
