--- a/public/accountCreating.html
+++ b/public/accountCreating.html
@@ -59,6 +59,14 @@
 		<div class="submitButton" id="submitButton">
 			Create
 		</div>
+		<div class="dialog" id="dialogId">
+			<div class="dialogContent" id="dialogContentId">
+				
+			</div>
+			<div class="dialogButton" id="dialogButtonId">
+				confirm			
+			</div>
+		</div>
 		<!-- To set this button, for the connectivity and switch the window(in css and js part) -->
 	</div>
 </body>
