--- a/public/accountCreating.html
+++ b/public/accountCreating.html
@@ -29,20 +29,20 @@
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Email/phone number
-				<input type="text" id="phoneOrEmail" />
+				Phone number
+				<input type="text" id="phoneOrEmail" maxlength="11"/>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item" >
 				Password
-				<input type="text" id="password" />
+				<input type="password" id="password" />
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
 				Confirm Password
-				<input type="text" id="confirmPassword" />
+				<input type="password" id="confirmPassword" />
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
