--- a/public/revenue.html
+++ b/public/revenue.html
@@ -108,12 +108,15 @@
                 
             </div>
 
-            <div style = "float:left; width:500px; height:1024px">
+            <div style = "float:left; width:500px;">
                 <div style = "float: left;margin-top:50px; margin-left:100px;font-size:20px; color:blue;font-weight:500;">
                     Total Revenue
                 </div>
                 <div id="totalRevenueId"  style = "float: left;margin-top:50px; margin-left:100px;font-size:20px; color:black;font-weight:500;">
                 </div>
+            </div>
+            <div id="nextId" style = "float: left;margin-top:20px;  margin-left:100px;font-size:20px; color:blue;font-weight:500;">
+                Next
             </div>
         </div>
 
