--- a/public/showProfit.html
+++ b/public/showProfit.html
@@ -338,17 +338,17 @@
                     <div style = "width:55px;float:left;text-align:center;color:blue;font-size:10px">
                         Revenue:
                     </div>
-                    <div id="costOfDate14" style = "width:55px;float:left;text-align:center;color:red;font-size:10px">
+                    <div id="costOfDate21" style = "width:55px;float:left;text-align:center;color:red;font-size:10px">
                     </div>
-                    <div id="revenueOfDate14" style = "width:55px;float:left;text-align:center;color:blue;font-size:10px">
+                    <div id="revenueOfDate21" style = "width:55px;float:left;text-align:center;color:blue;font-size:10px">
                     </div>
-                    <div id="profitOfDate14" style = "width:110px;text-align:center;width:110px;float:left;color:green;font-size:10px">
+                    <div style = "margin-top:8px;width:110px;float:left;color:gray;font-size:17px;text-align: center;">
+                       14
                     </div>
                     <div style = "margin-top:5px;width:110px;text-align:center;width:110px;float:left;color:green;font-size:10px">
                         Profit:
                     </div>
-                    <div style = "width:110px;text-align:center;width:110px;float:left;color:green;font-size:10px">
-                        $55.97
+                    <div id="profitOfDate21" style = "width:110px;text-align:center;width:110px;float:left;color:green;font-size:10px">
                     </div>
                     <div style= "clear: both;">
                     </div>
