--- a/public/fixedCost.html
+++ b/public/fixedCost.html
@@ -60,14 +60,17 @@
             </button>
             
             <div>
-                <div style = "float:left; width:500px; height:1024px">
+                <div style = "float:left; width:500px;">
                     <div style = "float: left;margin-top:60px; margin-left:120px;font-size:20px; color:blue;font-weight:500;">
                         Total Costs
                     </div>
                     <div id= "totalCost" style = "float: left;margin-top:60px; margin-left:120px;font-size:20px; color:black;font-weight:500;">
                     </div>
+                    
             </div>
-
+            <div id="nextId" style = "float: left;margin-top:10px; margin-left:120px;font-size:20px; color:blue;font-weight:500;">
+                Next
+            </div>
         </div>
 
         </div>
