--- a/public/showProfit.html
+++ b/public/showProfit.html
@@ -739,7 +739,7 @@
                 </div>
                
             </div> 
-
+<!-- 
 
             <div style = "float:left;margin-left:250px;margin-top:20px;font-size:18px;color:red">
                 Total Cost: $166.5
@@ -749,7 +749,7 @@
             </div> 
             <div style = "float:left;margin-left:80px;margin-top:20px;font-size:18px;color:green">
                 Total Profits: $204.65
-            </div> 
+            </div>  -->
         </div> 
         
     </div>
